--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -595,6 +595,32 @@ table.invoice tfoot > tr {
 }
 
 /**
+ * tabs
+ */
+.tabs .tab a {
+  color: rgba(0, 110, 115, 0.7);
+}
+
+.tabs .tab a:focus,
+.tabs .tab a:focus.active {
+  background-color: rgba(0, 178, 181, 0.2);
+}
+
+.tabs .tab a:hover,
+.tabs .tab a.active {
+  color: #006e73;
+}
+
+.tabs .tab.disabled a,
+.tabs .tab.disabled a:hover {
+  color: rgba(0, 110, 115, 0.4);
+}
+
+.tabs .indicator {
+  background-color: #006e73;
+}
+
+/**
  * action bar
  */
 .action-bar {
@@ -1546,6 +1572,10 @@ nav .nav-wrapper > ul > li > a > i {
   background-color: transparent;
   border-width: 0;
   overflow: visible;
+}
+
+.collection a.collection-item:not(.active):hover {
+  background-color: rgba(200, 200, 200, .2);
 }
 
 .collection > .collection-header {
